--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="container">
 		<div class="logo">
-			<img src="images/quick.jpg" alt="quick">
+			<img src="logo/quick.jpg" alt="quick">
 		</div>
 		<nav class="menu">
 			<ul>
