--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<header>
 		<div class="container">
 		<div class="logo">
+			<a href="#">
 			<img src="logo/quick.jpg" alt="quick">
+			</a>
 		</div>
 		<nav class="menu">
 			<ul>
